--- a/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
@@ -167,7 +167,7 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="text-gray font-weight-500">Loan Tennure</div>
+                                <div class="text-gray font-weight-500">Loan Tenure</div>
                                 <div class="text-color font-weight-500">{{masterLoan?.tenure}} Months</div>
                             </div>
                         </div>
