--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
@@ -63,7 +63,7 @@
                     <mat-cell *matCellDef="let row">
                         <div *ngxPermissionsOnly="['updateNewRequest']">
                             <button style="width: 120px;" class="apply-kyc" (click)="editProduct(row)"
-                                *ngIf="!row.isAssigned">
+                                *ngIf="!(row.isAssigned || row.customer?.customerKyc)">
                                 Edit
                             </button>
                         </div>
