--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/merchant/add-merchant/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/merchant/add-merchant/tabs/user-details/user-details.component.html
@@ -86,7 +86,7 @@
                                     Field is required</mat-error>
                                 <mat-error
                                     *ngIf="controls.mobileNumber.touched && controls.mobileNumber.errors?.minlength">
-                                    Length Should be 10    
+                                    Length Should be 10
                                 </mat-error>
                             </div>
                         </div>
@@ -136,7 +136,8 @@
                             <div *ngIf="controls.pinCode.touched && controls.pinCode.invalid">
                                 <mat-error *ngIf="controls.pinCode.touched && controls.pinCode.errors?.required">Field
                                     is required</mat-error>
-                                <mat-error *ngIf="controls.pinCode.touched && controls.pinCode.errors?.minlength"> Length Should be 6 </mat-error>
+                                <mat-error *ngIf="controls.pinCode.touched && controls.pinCode.errors?.minlength">
+                                    Length Should be 6 </mat-error>
                             </div>
                         </div>
                     </div>
@@ -145,15 +146,14 @@
                             <label class=" mandatory font-weight-500 text-color">Merchant Initial</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" placeholder="e.g AU" class="form-control" formControlName="initial" maxlength="2" ktAlphabets
-                            [class.isError]="controls.initial.touched && controls.initial.invalid">
+                            <input type="text" placeholder="e.g AU" class="form-control" formControlName="initial"
+                                maxlength="2" ktAlphabets
+                                [class.isError]="controls.initial.touched && controls.initial.invalid">
                             <div *ngIf="controls.initial.touched && controls.initial.invalid">
-                                <mat-error
-                                    *ngIf="controls.initial.touched && controls.initial.errors?.required">
+                                <mat-error *ngIf="controls.initial.touched && controls.initial.errors?.required">
                                     Field
                                     is required</mat-error>
-                                    <mat-error
-                                    *ngIf="controls.initial.touched && controls.initial.errors?.minlength">
+                                <mat-error *ngIf="controls.initial.touched && controls.initial.errors?.minlength">
                                     Field
                                     is required</mat-error>
                             </div>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-12">
-                            <kt-button [value]="'Next'" [type]="'button'" (click)="submit()"></kt-button>
+                            <kt-button [value]="'Next'" [type]="'button'" (action)="submit()"></kt-button>
                         </div>
                     </div>
                 </form>
