--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -82,7 +82,7 @@
                     </mat-tab>
 
                     <mat-tab label="Loan Status Approval" [disabled]="disabled[7]"
-                        *ngIf="loanStage?.id == 7 || loanStage?.id == 4 || (url == 'view-loan' && loanStage?.id == 7) || (url == 'view-loan' && loanStage?.id == 4) || (url == 'view-loan' && loanStage?.id == 5)">
+                        *ngIf="loanStage?.id == 7 || loanStage?.id == 4 || loanStage?.id >= 10 || (url == 'view-loan' && loanStage?.id == 7) || (url == 'view-loan' && loanStage?.id == 4) || (url == 'view-loan' && loanStage?.id == 5)">
                         <kt-approval [action]="action" [disable]="approvalFrom" [details]="customerDetail"
                             [masterAndLoanIds]="masterAndLoanIds" [loanStage]="loanStage"
                             (disbursal)="disbursal($event)">
@@ -90,7 +90,7 @@
                     </mat-tab>
 
                     <mat-tab label="Disbursement"
-                        *ngIf="loanStage?.id == 4 || loanStage?.id == 10 || (loanStage?.id == 5 && url =='view-loan')">
+                        *ngIf="loanStage?.id == 4 || loanStage?.id >= 10 || (loanStage?.id == 5 && url =='view-loan')">
                         <kt-disburse [masterAndLoanIds]="masterAndLoanIds" [loanDetials]="customerDetail"
                             [disable]="disabledForm" [showButton]="true" [disbursed]="disbursed"></kt-disburse>
                     </mat-tab>
