--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -58,7 +58,14 @@
                         <span *ngIf="item.masterLoan.tenure != 1">Months</span>
                     </mat-cell>
                 </ng-container>
-
+                <ng-container matColumnDef="parnterName">
+                    <mat-header-cell *matHeaderCellDef>Partner Name</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item?.masterLoan?.partnerBranch?.partner?.name }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="partnerBranch">
+                    <mat-header-cell *matHeaderCellDef>Partner Branch</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item?.masterLoan?.partnerBranch?.name }}</mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="principalAmount">
                     <mat-header-cell *matHeaderCellDef>Principal Outstanding Amount</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.masterLoan.outstandingAmount }}</mat-cell>
