--- a/gold-admin-frontend/src/app/views/partials/components/elapsed-time/elapsed-time.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/elapsed-time/elapsed-time.component.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
+    height: 100%;
 }
 
 @keyframes blink {
