--- a/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
@@ -217,7 +217,11 @@
 
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Mobile Number</label>
+                            <label class="kt-padding-l-10 mandatory">Mobile Number
+
+                                <span
+                                    *ngIf="controls.receiverType.value"><br>{{ '(' + controls.receiverType.value + ')' }}</span>
+                            </label>
                         </div>
                         <div class="col-8">
                             <input class="form-control" formControlName="mobileNumber" (blur)="getDetailsByMobile()"
