--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -83,7 +83,7 @@
                         <div class="col-8">
                             <select class="form-control" formControlName="reasonForOther"
                                 placeholder="reason for Incomplete" (change)="patchReason()">
-                                <option value=null selected disabled>Choose a reason </option>
+                                <option value='' selected disabled>Choose a reason </option>
                                 <option [value]="reason.description" *ngFor="let reason of reasons">
                                     {{reason.description}}
                                 </option>
@@ -91,7 +91,7 @@
 
                             <small>
                                 <mat-error
-                                    *ngIf="cceControls.reasonFromCce.touched && cceControls.reasonFromCce.errors?.reasonRequired">
+                                    *ngIf="cceControls.reasonForOther.touched && cceControls.reasonForOther.invalid">
                                     Please choose a reason</mat-error>
                             </small>
 
