--- a/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
+++ b/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
@@ -59,10 +59,18 @@
                         <span><u>{{this.customerAddress}}</u></span>
                     </div>
                 </div>
-                <div class="row pt-3">
+                <div class="row pt-3 ">
                     <div class="col-10 m-auto">
-                        <span>Phone No : </span>
-                        <span><u>{{this.customerMobileNo}}</u></span>
+                        <div class="row">
+                            <div class="col-4">
+                                <span>Phone No : </span>
+                                <span><u>{{this.customerMobileNo}}</u></span>
+                            </div>
+                            <div class="col-6">
+                                <span>Email Id : </span>
+                                <span><u>{{this.customerEmail}}</u></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row pt-3">
@@ -82,9 +90,9 @@
         </div>
         <div class="row pt-3">
             <div class="col-10 m-auto">
-                <p>I
+                <p>I Mr./Mrs.
                     <span><u>{{this.customerName}}</u></span>
-                    herby request/consent Augmont private limited to do purity test/Melting of the ornaments described
+                    hereby request/consent Augmont private limited to do purity test/Melting of the ornaments described
                     below:</p>
             </div>
         </div>
@@ -98,7 +106,7 @@
                         <th style="width: 10%">sr.No</th>
                         <th style="width: 50%; word-wrap: break-word">Description</th>
                         <th style="width: 20%">Quantity (no's)</th>
-                        <th style="width: 20%">Gross weight (gms)</th>
+                        <th style="width: 20%">Gross weight (in grams)</th>
                     </tr>
                     {{#each ornamentData}}
                     <tr>
@@ -118,7 +126,7 @@
                 <ol type="A">
                     <li>I truly declare and confirm that I am the absolute owner of the gold ornaments mentioned above
                         which is
-                        free from any third party claim and that The said item(s) are not derived from, or been created
+                        free from any and all claims including but not limited to third-party claims and that the said item(s) are not derived from, or been created
                         by, as a
                         result of activity which is either illegal or immoral in either the jurisdiction of India or any
                         other
@@ -141,7 +149,7 @@
                         the same
                         before melting the ornament and Augmont private limited shall not be held liable or responsible
                         for the
-                        same.
+                        same in any event whatsoever. I further agree to accept the stone in the state and manner they are returned to me by Augmont, upon my request.
                     </li>
                     <li>I am aware that Augmont private Is equipped with facilities to ascertain the purity of gold
                         ornaments
@@ -154,16 +162,15 @@
                     </li>
                     <li>I agree and undertake to receive back the ornament in the form it assumes post its
                         testing/melting, as I
-                        am aware that once the stone are removed from the gold ornament and/or if the same is melted, it
+                        am aware that once the stone/s is/are removed from the gold ornament and/or if the same is melted, it
                         cannot be
-                        restored to the its original shape/weight/ purity.
+                        restored to the its original shape/weight/value.
                     </li>
                     <li>Post such melting, if the price offered by Augmont private limited for purchasing the same is
                         not
-                        acceptable to me, I agree and undertake to receive back the ornament in the form its assume post
-                        melting,
+                        acceptable to me, I agree and undertake to receive back the ornament/gold in the form it's assumed to be post melting,
                         as I am aware that the gold ornament once melted cannot be restored to its original
-                        shape/weight/ purity.
+                        shape/weight/value.
                     </li>
                     <li>I reiterate that, the said ornaments are being melted as per my request and I hereby accept all
                         responsibility and consequences towards such Testing/Melting by Augmont private Limited and
@@ -171,25 +178,32 @@
                         Augmont Private limited shall not be held liable or responsible for any claim or damage of
                         whatsoever
                         nature (including any claim from any third party or otherwise) for the loss off
-                        shape/weight/purity/Value
+                        shape/weight/Value
                         of my said ornaments.
                     </li>
                 </ol>
             </div>
         </div>
         {{#each acknowledgementData}}
-        <div class="row pt-4">
+        <div class="row pt-2">
+            <div class="col-10 m-auto">
+              <div class="row">
+                <div class="col-4 ">place: __________</div>
+              </div>
+            </div>
+          </div>
+        <div class="row pt-2">
           <div class="col-10 m-auto">
             <div class="row">
-              <div class="col-4 "><b>Date: </b><u>{{this.date}}</u></div>
+              <div class="col-4 ">Date: <u>{{this.date}}</u></div>
               <div class="col-4"></div>
-              <div class="col-4 text-right"><b>Signature</b>__________</div>
+              <div class="col-4 text-right">Signature__________</div>
             </div>
           </div>
            
         </div>
-        <div class="row">
-            <div class="col-10 m-auto"><b>CIN</b><span>__________</span></div>
+        <div class="row pt-4">
+            <div class="col-10 m-auto">CIN<span>__________</span></div>
         </div>
         {{/each}}
 
