--- a/gold-loan-backend/templates/pawnticket-secure-unsecure-template.html
+++ b/gold-loan-backend/templates/pawnticket-secure-unsecure-template.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href={{secureHtml}}>
 
     <style>
-        /* html {
+        html {
             zoom: 0.75;
-        } */
+        }
 
         body {
             font-size: 13px !important;
