--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay-history/quick-pay-history.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay-history/quick-pay-history.component.html
@@ -6,7 +6,7 @@
             <table class="table outer-border">
                 <thead>
                     <th class="transparent">Transaction ID</th>
-                    <th class="transparent">PAID AMOUNT</th>
+                    <th class="transparent">Paid Amount</th>
                     <th class="transparent">Payment Date</th>
                     <th class="transparent">Status</th>
                 </thead>
