--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -425,6 +425,31 @@
           </div>
         </div>
 
+        <!-- CRON -->
+        <div class="kt-portlet__body" *ngIf="filterName == 'cron'">
+          <form class="kt-form" [formGroup]="filterForm">
+            <div class="row">
+              <div class="col">
+                <label>Product</label>
+                <kt-multi-select-search formControlName="product" [items]="cronProductArray"
+                  [multiple]="true" [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'Product'">
+                </kt-multi-select-search>
+              </div>
+<!-- emi,loan -->
+<!-- failed,success -->
+              <div class="col">
+                <label>Status</label>
+                <kt-multi-select-search formControlName="cronStatus" [items]="cronStatusArray" [multiple]="true"
+                  [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'Status'"></kt-multi-select-search>
+              </div>
+              <div class="col-2 d-flex align-items-end">
+                <label></label>
+                <kt-button [value]="'Apply'" [type]="'button'" (click)="applyFilter()"></kt-button>
+              </div>
+            </div>
+          </form>
+        </div>
+
         <!-- from and to date -->
         <!-- <div class="kt-portlet__body" *ngIf="filterName =='fromDate&toDate'">
           <div class="kt-form">
