--- a/gold-admin-frontend/src/app/app.component.html
+++ b/gold-admin-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <kt-splash-screen *ngIf="loader"></kt-splash-screen>
 
-<ng-http-loader [backdrop]="true" [backgroundColor]="'#454d67'" [debounceDelay]="100" [extraDuration]="300"
-    [minDuration]="300" [opacity]="0.4" [spinner]="spinkit.skCubeGrid"></ng-http-loader>
+<ng-http-loader *ngIf="!hideLoader" [backdrop]="true" [backgroundColor]="'#454d67'" [debounceDelay]="100"
+    [extraDuration]="300" [minDuration]="300" [opacity]="0.4" [spinner]="spinkit.skCubeGrid"></ng-http-loader>
 
 <router-outlet></router-outlet>
