--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.scss
@@ -24,4 +24,8 @@
     .mat-column-ornaments {
         flex: 0 0 4%;
     }
+    .mat-column-view {
+        display: flex;
+        justify-content: center;
+    }
 }
