--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -36,7 +36,15 @@
 
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.masterLoan.loanPersonalDetail.customerUniqueId | uppercase}}
+                    <mat-cell *matCellDef="let item">{{item.masterLoan.customer.customerUniqueId | uppercase}}
+                    </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="customerName">
+                    <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
+                    <mat-cell *matCellDef="let item">
+                        {{ item.masterLoan.customer.firstName | titlecase }}
+                        {{ item.masterLoan.customer.lastName | titlecase }}
                     </mat-cell>
                 </ng-container>
 
@@ -115,9 +123,6 @@
                 <ng-container matColumnDef="ornaments">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <!-- <button class="apply-kyc" (click)="ornamentsDetails(item.customerLoanOrnamentsDetails)">View
-                            Details
-                        </button> -->
                         <button class="apply-kyc" (click)="viewLoan(item)">View
                             Loan
                         </button>
@@ -145,25 +150,9 @@
                                 </button>
                             </div>
                         </ng-container>
-
-                        <!-- <button style="width: 120px;" class="apply-kyc" (click)="updateStatus(item)">Update
-                        </button> -->
-
                     </mat-cell>
                 </ng-container>
-                <!-- <ng-container matColumnDef="uploadDocument">
-                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-                    <mat-cell *matCellDef="let item">
-                        <div *ngxPermissionsOnly="['partReleaseStatus']">
-                            <div *ngIf="item.partReleaseStatus == 'released'">
-                                <button *ngIf="!item.documents" style="width: 130px;" class="apply-kyc"
-                                    (click)="updateDocument(item)">Upload
-                                    Documents
-                                </button>
-                            </div>
-                        </div>
-                    </mat-cell>
-                </ng-container> -->
+
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef> Acknowledgement Receipt </mat-header-cell>
                     <mat-cell *matCellDef="let item">
